[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/snd/Interface_Bleeps_OGG/Click_04.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/ui/credit/credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/start/loader.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/start/start.gd" type="Script" id=23]
[ext_resource path="res://src/ui/about/about.tscn" type="PackedScene" id=560]

[node name="start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="loader" parent="." instance=ExtResource( 5 )]
progress_bar_path = NodePath("../progress/panel/margin/vBox/progress_bar")

[node name="snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="panel" type="PanelContainer" parent="main"]
margin_left = 439.0
margin_top = 209.0
margin_right = 585.0
margin_bottom = 391.0

[node name="margin" type="MarginContainer" parent="main/panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 180.0

[node name="main" type="VBoxContainer" parent="main/panel/margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 134.0
margin_bottom = 170.0

[node name="label" type="Label" parent="main/panel/margin/main"]
margin_right = 126.0
margin_bottom = 26.0
text = "Starry Night"
align = 1
valign = 1

[node name="start" type="Button" parent="main/panel/margin/main"]
margin_top = 30.0
margin_right = 126.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Start"

[node name="license" type="Button" parent="main/panel/margin/main"]
margin_top = 64.0
margin_right = 126.0
margin_bottom = 94.0
size_flags_horizontal = 3
text = "Licenses"

[node name="credits" type="Button" parent="main/panel/margin/main"]
margin_top = 98.0
margin_right = 126.0
margin_bottom = 128.0
text = "Credits"

[node name="exit" type="Button" parent="main/panel/margin/main"]
margin_top = 132.0
margin_right = 126.0
margin_bottom = 162.0
size_flags_horizontal = 3
text = "Exit"

[node name="difficulty" type="VBoxContainer" parent="main/panel/margin"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 134.0
margin_bottom = 170.0

[node name="label" type="Label" parent="main/panel/margin/difficulty"]
margin_right = 126.0
margin_bottom = 26.0
text = "Starry Night"
align = 1
valign = 1

[node name="easy" type="Button" parent="main/panel/margin/difficulty"]
margin_top = 30.0
margin_right = 126.0
margin_bottom = 60.0
text = "Easy"

[node name="medium" type="Button" parent="main/panel/margin/difficulty"]
margin_top = 64.0
margin_right = 126.0
margin_bottom = 94.0
text = "Medium"

[node name="hard" type="Button" parent="main/panel/margin/difficulty"]
margin_top = 98.0
margin_right = 126.0
margin_bottom = 128.0
text = "Hard"

[node name="back" type="Button" parent="main/panel/margin/difficulty"]
margin_top = 132.0
margin_right = 126.0
margin_bottom = 162.0
text = "Back"

[node name="about" parent="." instance=ExtResource( 560 )]
visible = false

[node name="credits" parent="." instance=ExtResource( 4 )]
visible = false

[node name="panel" parent="credits" index="1"]
margin_left = 510.0
margin_top = 298.0
margin_right = 514.0
margin_bottom = 302.0

[node name="margin" parent="credits/panel" index="0"]
margin_bottom = 312.0

[node name="main" parent="credits/panel/margin" index="0"]
margin_bottom = 302.0

[node name="return" parent="credits/panel/margin/main" index="3"]
visible = false

[node name="exit" parent="credits/panel/margin/main" index="4"]
visible = false
margin_top = 264.0
margin_bottom = 294.0

[node name="back" type="Button" parent="credits/panel/margin/main" index="5"]
margin_top = 264.0
margin_right = 542.0
margin_bottom = 294.0
text = "Back"

[node name="progress" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" type="PanelContainer" parent="progress"]
margin_left = 510.0
margin_top = 298.0
margin_right = 514.0
margin_bottom = 302.0

[node name="margin" type="MarginContainer" parent="progress/panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 274.0
margin_bottom = 74.0

[node name="vBox" type="VBoxContainer" parent="progress/panel/margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="progress/panel/margin/vBox"]
margin_right = 256.0
margin_bottom = 26.0
text = "Loading..."
align = 1

[node name="progress_bar" type="ProgressBar" parent="progress/panel/margin/vBox"]
margin_top = 30.0
margin_right = 256.0
margin_bottom = 56.0
rect_min_size = Vector2( 256, 16 )

[connection signal="done_loading" from="loader" to="." method="_on_loader_done_loading"]
[connection signal="draw" from="main/panel/margin/main" to="." method="_on_main_draw"]
[connection signal="pressed" from="main/panel/margin/main/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main/panel/margin/main/license" to="." method="_on_license_pressed"]
[connection signal="pressed" from="main/panel/margin/main/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="main/panel/margin/main/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="main/panel/margin/difficulty/easy" to="." method="_on_difficulty_pressed" binds= [ "easy" ]]
[connection signal="pressed" from="main/panel/margin/difficulty/medium" to="." method="_on_difficulty_pressed" binds= [ "medium" ]]
[connection signal="pressed" from="main/panel/margin/difficulty/hard" to="." method="_on_difficulty_pressed" binds= [ "hard" ]]
[connection signal="pressed" from="main/panel/margin/difficulty/back" to="." method="_on_difficulty_back_pressed"]
[connection signal="draw" from="about" to="." method="_on_about_draw"]
[connection signal="visibility_changed" from="about" to="." method="_on_about_visibility_changed"]
[connection signal="draw" from="credits" to="." method="_on_credits_draw"]
[connection signal="pressed" from="credits/panel/margin/main/back" to="." method="_on_credits_back_pressed"]

[editable path="credits"]
